IPAM_LOAD/service-php.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
spec:
  type: NodePort
  ports:
     - port: 80
  selector:
    app: php-apache
